--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.14.134",
     "gulp": "^4.0.2",
     "gulp-typescript": "^5.0.1",
     "typescript": "^3.5.1"
   },
   "dependencies": {
+    "lodash": "^4.17.11",
     "reflect-metadata": "^0.1.13"
   }
 }
